k3s/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: lh.48340.xyz
      http:
        paths:
          - backend:
              service:
                port:
                  number: 80
                name: longhorn-frontend
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lh.48340.xyz
      secretName: longhorn-http-tls
  ingressClassName: traefik
